Fix horizontal scroll

--- a/src/assets/scss/components/the-nav.scss
+++ b/src/assets/scss/components/the-nav.scss
@@ -3,6 +3,8 @@
   justify-content: space-between;
   width: auto;
   list-style-type: none;
+  height: auto;
+  padding: 0;
 
   &--item {
     display: flex;
